# copilot_framework

./: .gitignore  .gitmodules  AGENTG_BEST_PRACTICES.md  AGENTS_BEST_PRACTICES.md  README.md  cosk-analysis.md
cosk/: README.md  WALKTHROUGH.md  cli.py  config.py  http_server.py  index_manager.py  index_manifest.py  index_service.py  inspect.py  pyproject.toml  repo_registry.py  token_estimation.py  watch_mode.py
cosk/.cosk/: registry.yaml
cosk/cli/: __init__.py  __main__.py  main.py  output.py  setup_wizard.py
cosk/config/: cosk.settings.yaml
cosk/docs/: client_setup.md
cosk/extraction/: models.py  parser.py  query_loader.py  registry.py  summarizers.py
cosk/extraction/queries/: python.scm
cosk/graph/: builder.py  exceptions.py  state.py
cosk/indexing/: vector_store.py
cosk/mcp/: server.py
cosk/safety/: middleware.py
cosk/tests/: conftest.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_config.py  test_deps.py  test_extraction.py  test_graph.py  test_graph_builder.py  test_http_server.py  test_http_server_integration.py  test_http_sse.py  test_index_manager.py  test_index_manifest.py  test_index_service.py  test_index_service_integration.py  test_indexing.py  test_inspect.py  test_inspect_integration.py  test_installability.py  test_json_schema.py  test_mcp_server.py  test_mcp_server_integration.py  test_mcp_tools.py  test_models.py  test_multi_repo_integration.py  test_parser_dir.py  test_parser_file.py  test_parser_gitignore.py  test_query_loader.py  test_readme_docs.py  test_registry.py  test_repo_registry.py  test_routing_docs.py  test_safety_middleware.py  test_setup_wizard.py  test_summarizers.py  test_token_estimation.py  test_top_k_resolution.py  test_vector_store.py  (+2 more)
(+76 files in other folders)
