[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosk"
version = "0.1.0"
description = "Cosk v2 codebase-skeleton orchestration scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "tree-sitter>=0.23,<0.25",
  "tree-sitter-python",
  "tree-sitter-javascript",
  "tree-sitter-typescript",
  "tree-sitter-java",
  "tree-sitter-go",
  "tree-sitter-rust",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "tree-sitter-ruby",
  "tree-sitter-bash",
  "tree-sitter-json",
  "tree-sitter-yaml",
  "tree-sitter-toml",
  "tree-sitter-css",
  "tree-sitter-html",
  "tree-sitter-kotlin",
  "tree-sitter-lua",
  "tree-sitter-markdown",
  "tree-sitter-php",
  "tree-sitter-scala",
  "tree-sitter-sql",
  "tree-sitter-swift",
  "tree-sitter-c-sharp",
  "lancedb>=0.8,<0.10; python_version < '3.14'",
  "lancedb>=0.25,<0.31; python_version >= '3.14'",
  "networkx>=3.2,<4.0",
  "sentence-transformers>=3.0,<4.0",
  "google-genai>=0.8,<1.0",
  "mcp>=1.26,<2.0",
  "rich>=13.0,<14.0",
]

[tool.setuptools]
packages = [
  "cosk",
  "cosk.extraction",
  "cosk.indexing",
  "cosk.graph",
  "cosk.mcp",
  "cosk.safety",
]
include-package-data = true

[tool.setuptools.package-dir]
cosk = "."
"cosk.extraction" = "extraction"
"cosk.indexing" = "indexing"
"cosk.graph" = "graph"
"cosk.mcp" = "mcp"
"cosk.safety" = "safety"

[tool.setuptools.package-data]
"cosk" = ["config/cosk.settings.yaml"]
"cosk.extraction" = ["queries/*.scm"]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests that install dependencies or run cross-process checks.",
]
